<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_share_what_you_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description_share_what_you_read"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/share_what_you_read"
        tools:srcCompat="@drawable/share_what_you_read" />

    <ImageView
        android:id="@+id/iv_article_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_article_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_share_what_you_read"
        app:srcCompat="@color/white"
        tools:srcCompat="@color/white" />

    <TextView
        android:id="@+id/tv_publication_name"
        style="@style/begum_black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/publication_example"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/iv_article_image"
        app:layout_constraintTop_toBottomOf="@id/iv_article_image" />

    <TextView
        android:id="@+id/tv_article_title"
        style="@style/lato_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/title_example"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/iv_article_image"
        app:layout_constraintRight_toRightOf="@id/iv_article_image"
        app:layout_constraintTop_toBottomOf="@id/tv_publication_name" />

    <TextView
        android:id="@+id/tv_time_posted"
        style="@style/lato_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/x_h_ago"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/iv_article_image"
        app:layout_constraintTop_toBottomOf="@id/iv_article_image" />

    <TextView
        android:id="@+id/tv_dot"
        style="@style/lato_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/dot"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/tv_time_posted"
        app:layout_constraintTop_toBottomOf="@id/iv_article_image" />

    <TextView
        android:id="@+id/tv_shoutout_count"
        style="@style/lato_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/shoutout_count"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/tv_dot"
        app:layout_constraintTop_toBottomOf="@id/iv_article_image" />

    <ImageView
        android:id="@+id/iv_bookmarked"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/description_bookmarked"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/tv_shoutout_count"
        app:layout_constraintLeft_toRightOf="@id/tv_shoutout_count"
        app:layout_constraintTop_toTopOf="@id/tv_shoutout_count"
        app:srcCompat="@drawable/ic_bookmark_filled"
        tools:srcCompat="@drawable/ic_bookmark_filled" />

    <Button
        android:id="@+id/btn_bookmark_icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@id/tv_time_posted"
        android:layout_marginTop="34dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_share_icon"
        android:contentDescription="@string/description_bookmark_icon"
        android:background="@drawable/debrief_bookmark_empty"/>

    <Button
        android:id="@+id/btn_share_icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@id/tv_time_posted"
        android:layout_marginTop="34dp"
        app:layout_constraintLeft_toRightOf="@id/btn_bookmark_icon"
        app:layout_constraintRight_toLeftOf="@id/btn_shout_icon"
        android:contentDescription="@string/description_share_icon"
        android:background="@drawable/debrief_share"/>

    <Button
        android:id="@+id/btn_shout_icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@id/tv_time_posted"
        android:layout_marginTop="34dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_share_icon"
        android:contentDescription="@string/description_share_icon"
        android:background="@drawable/debrief_shoutout"/>


</androidx.constraintlayout.widget.ConstraintLayout>