<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#00FFFFFF"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_article_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_publication_name"
            style="@style/begum_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publication_example"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_article_title"
            style="@style/helvetica_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/title_example"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/iv_article_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_publication_name" />

        <ImageView
            android:id="@+id/iv_article_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/creamy_white"
            android:contentDescription="@string/description_article_image"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/creamy_white"
            tools:srcCompat="@color/creamy_white" />

        <TextView
            android:id="@+id/tv_dot"
            style="@style/helvetica_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_time_posted" />

        <TextView
            android:id="@+id/tv_time_posted"
            style="@style/helvetica_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_h_ago"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_shoutout_count"
            style="@style/helvetica_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoutout_count"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_dot" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10.5dp"
            android:background="@drawable/ic_bookmark_filled"
            android:contentDescription="@string/description_bookmark_icon"
            app:layout_constraintBottom_toBottomOf="@id/tv_shoutout_count"
            app:layout_constraintStart_toEndOf="@id/tv_shoutout_count"
            app:layout_constraintTop_toTopOf="@id/tv_shoutout_count" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>